<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@drawable/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/image"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poplight"
            android:textColor="@color/white"
            android:textSize="13sp"
            />

        <com.example.silentscript.customeview.login.LoginInput
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background_white"
            android:layout_marginEnd="20dp"
          />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poplight"
            android:textColor="@color/white"
            android:textSize="13sp"
            />

        <com.example.silentscript.customeview.login.LoginInput
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background_white"
            android:layout_marginEnd="20dp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="end"
           android:paddingEnd="20dp"
           android:orientation="horizontal">

           <CheckBox
               android:id="@+id/rememberMeCheckbox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="Remember Me"
               android:checked="true"
               style="@style/CheckboxStyle"/>
       </LinearLayout>

        <com.example.silentscript.customeview.login.LoginButton
            android:id="@+id/login"
            android:gravity="center"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/popmed"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <com.example.silentscript.customeview.login.LoginButton
            android:id="@+id/google_register"
            android:gravity="center"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/popmed"
            android:layout_height="40dp"
            android:paddingEnd="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="@font/poplight"
                android:text="@string/dont"
                />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:fontFamily="@font/popmed"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/register"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>